--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="rating">Rating :</string>
     <string name="insert_fragment_title">Insert Movie</string>
     <string name="insert">insert</string>
+    <string name="delete">delete</string>
+    <string name="save">save</string>
 </resources>
