Tugas 21 done dengan notifikasi tidak muncul, tetapi mendapat pesan dari cloud messaging dan muncul di console

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="new_password">New password</string>
     <string name="retype_password">Retype password</string>
     <string name="error_input_password">Password tidak boleh kosong</string>
+    <string name="description">description</string>
 </resources>
